tests/baselines/reference/unusedLocalsAndParametersTypeAliases2.errors.txt
unusedLocalsAndParametersTypeAliases2.ts(2,6): error TS6196: 'handler1' is declared but never used.
unusedLocalsAndParametersTypeAliases2.ts(5,10): error TS6133: 'foo' is declared but its value is never read.
unusedLocalsAndParametersTypeAliases2.ts(6,10): error TS6196: 'handler2' is declared but never used.


==== unusedLocalsAndParametersTypeAliases2.ts (3 errors) ====
    // unused
    type handler1 = () => void;
         ~~~~~~~~
!!! error TS6196: 'handler1' is declared but never used.
    
    
    function foo() {
             ~~~
!!! error TS6133: 'foo' is declared but its value is never read.
        type handler2 = () => void;
             ~~~~~~~~
!!! error TS6196: 'handler2' is declared but never used.
        foo();
    }
    
    export {}